# Ballet-Sorcery

./: .gitignore  pyproject.toml  requirements.txt
docs/: DESIGN_opensim_full_pipeline.md  ISSUE_007_CALIBRATION.md  POC_SPEC.md  PROJECT_OVERVIEW.md  TECH_RISKS.md  joint_analyzer_spec.md
reports/: ISSUE_REPORT_006.md
reports/2026-02-14_phase0_pose_extraction/: report.typ
reports/2026-02-14_phase1_comparison/: report.typ
reports/2026-02-16_phase2_3d_comparison/: POC_Analysis_Report.md  report.typ  summary_of_visualizations.md
reports/2026-02-22_comprehensive_report/: report.typ
reports/2026-02-22_e2e_test/: report.typ
reports/2026-02-22_phase3_fixes/: report.typ
src/: anatomy_overlay_viewer.py  beat_loss_analyzer.py  comparator.py  joint_angles.py  live_study_viewer.py  music_synchronizer.py  normalizer.py  opensim_dynamics.py  opensim_ik.py  pipeline.py  pose2sim_bridge.py  pose_extractor.py  realtime_comparator.py  smpl_visualizer.py  smplx_engine.py  smplx_mapper.py  trc_exporter.py  trc_v2_exporter.py  video_overlay_generator.py  viewer_app.py  visualizer.py
tests/: conftest.py  test_beat_loss_analyzer.py  test_phase0.py  test_phase2.py  test_pm_agent_integration.py  test_smplify_pipeline.py  test_smplx_engine_integration.py  test_smplx_pipeline.py  test_trc_v2_exporter.py
tools/: capture_final_screenshot.py  diag_joint_angles.py  diag_mp_smpl_vectors.py  diag_smplx_vs_mp.py  diag_vtp_vs_mp.py  dpg_test.py  e2e_reprojection_overlay.py  e2e_smpl_error.py  extract_ballet_poses.py  fix_marker_indices.py  joint_analyzer.py  run_pipeline_test.py  self_test.py  test_gui_loop.py  test_load_smplx.py  test_smplx_marker_density.py  train_ballet_gmm.py  ts_dpg.py  verify_fk_joints.py  verify_integrated_platform.py  verify_mp_smplx_alignment.py  verify_tpose_symmetry.py  verify_ui_stable.py  verify_usecases.py  verify_vtp_visual.py  visual_verification.py  visualize_smplify_result.py
(+56 files in other folders)
