[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ballet-jubeop"
version = "0.1.0"
description = "芭蕾呪法 (Ballet Projection System) - Pose comparison and synchronization system"
readme = "docs/PROJECT_OVERVIEW.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ballet Jubeop Team"}
]
keywords = ["ballet", "pose-estimation", "mediapipe", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.20.0",
    "plotly>=5.13.0",
    "Pillow>=9.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "superclaude>=0.4.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "confidence_check: Tests with pre-execution confidence checking",
    "self_check: Tests with post-implementation validation",
    "reflexion: Tests with error learning pattern",
    "complexity: Token budget complexity level (simple, medium, complex)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.hatch.build.targets.wheel]
packages = ["src"]
